# pico-playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
components/: CMakeLists.txt
components/pico_stdio_usb/: CMakeLists.txt  stdio_usb.c  stdio_usb_descriptors.c
components/pico_stdio_usb/include/: tusb_config.h
components/pico_stdio_usb/include/pico/: stdio_usb.h
inc/: ads1292r.hpp  common.hpp  logging.h
src/: main.cpp
